--- a/course-materials/lecture-slides/SLIDES-recap.qmd
+++ b/course-materials/lecture-slides/SLIDES-recap.qmd
@@ -384,7 +384,7 @@ week 1 | week 2 | [**week 3**]{.teal-text} | [**week 4**]{.teal-text} | week 5 |
 <hr>
 
 {{< include sections/lyme.qmd >}}
-{{< include sections/4.1-jobs.qmd >}}
+{{< include sections/ARCHIVE/4.1-jobs.qmd >}}
 
 :::: {.columns}
 
